--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "gh-pages": "^4.0.0",
     "prettier": "2.6.2"
+  },
+  "dependencies": {
+    "animate.css": "^4.1.1"
   }
 }
