running prettier to clean up code

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,6 @@
 {
   "trailingComma": "es5",
   "tabWidth": 2,
-  "useTabs": true,
   "semi": false,
-  "singleQuote": true,
-  "parser": "css"
+  "singleQuote": true
 }
