--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "next": "13.5.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint-config-next": "^14.0.1",
+    "next": "^14.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
