--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@types/node": "20.4.1",
@@ -32,7 +36,10 @@
     "@storybook/testing-library": "^0.2.0",
     "autoprefixer": "^10.4.14",
     "eslint-plugin-storybook": "^0.6.13",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.31",
+    "prettier": "^3.2.5",
     "storybook": "^7.1.1",
     "tailwindcss": "^3.3.3"
   },
